GNOME Bugzilla – Bug 706569
regression: playbin: chained oggs don't work any more
Last modified: 2013-08-22 15:34:37 UTC
wget http://people.freedesktop.org/~tpm/samples/chained.ogg gst-play-1.0 chained.ogg The first chain is about 23 seconds long. That it plays fine, after that it just goes through the chains as if it was going to fakesink. This works fine in the 1.0 branch (with gst-launch playbin). <slomo> i'm sure the problem is in streamsynchronizer <slomo> something with the stream-ids and stream group detection
commit fc79a688 ogg: Add support for group-id in the stream-start event broke things according to git-bisect.
commit 02c6766c8a2910c0ae1d2ff4da1201af174b6d23 Author: Sebastian Dröge <slomo@circular-chaos.org> Date: Thu Aug 22 17:33:45 2013 +0200 oggdemux: Update segment.base with the chain's start time too Fixes playback of chained ogg files. https://bugzilla.gnome.org/show_bug.cgi?id=706569