oggdemux: Update segment.base with the chain's start time too

Fixes playback of chained ogg files.

https://bugzilla.gnome.org/show_bug.cgi?id=706569